[sprint_3] added user
