# src/main/java/kz/halykacademy/bookstore/controllers/UserController.java
@@ -1,0 +1,65 @@
+package kz.halykacademy.bookstore.controllers;
+
+import kz.halykacademy.bookstore.dto.UserDTO;
+import kz.halykacademy.bookstore.models.User;
+import kz.halykacademy.bookstore.services.UserService;
+import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+import java.util.stream.Collectors;
+
+@RestController
+@RequestMapping("/users")
+public class UserController {
+    private final UserService userService;
+    private final ModelMapper modelMapper;
+
+    @Autowired
+    public UserController(UserService userService, ModelMapper modelMapper) {
+        this.userService = userService;
+        this.modelMapper = modelMapper;
+    }
+
+    @GetMapping
+    public List<UserDTO> getAll() {
+        return userService.readAll()
+                .stream()
+                .map(this::convertToUserDTO)
+                .collect(Collectors.toList());
+    }
+
+    @GetMapping("/{id}")
+    public UserDTO getById(@PathVariable(name = "id") Long id) {
+        return convertToUserDTO(userService.readById(id));
+    }
+
+    @PostMapping
+    public ResponseEntity post(@RequestBody UserDTO userDTO) {
+        userService.create(convertToUser(userDTO));
+        return ResponseEntity.ok(HttpStatus.OK);
+    }
+
+    @PutMapping
+    public ResponseEntity put(@RequestBody UserDTO userDTO) {
+        userService.update(userDTO.getId(), convertToUser(userDTO));
+        return ResponseEntity.ok(HttpStatus.OK);
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity delete(@PathVariable(name = "id") Long id) {
+        userService.delete(id);
+        return ResponseEntity.ok(HttpStatus.OK);
+    }
+
+    private UserDTO convertToUserDTO(User user) {
+        return modelMapper.map(user, UserDTO.class);
+    }
+
+    private User convertToUser(UserDTO userDTO) {
+        return modelMapper.map(userDTO, User.class);
+    }
+}
