# swagger.yaml
@@ -12,6 +12,8 @@ tags:
     description: "All about publishers"
   - name: "genre"
     description: "All about genres"
+  - name: "user"
+    description: "All about users"
 schemes:
   - "https"
 paths:
@@ -285,7 +287,7 @@ paths:
           format: "int64"
       responses:
         "404":
-          description: "Book not found"
+          description: "Author not found"
 
   /authors/findByFio:
     get:
@@ -430,7 +432,7 @@ paths:
           schema:
             $ref: "#/definitions/Publisher"
         "404":
-          description: "Author not found"
+          description: "Publisher not found"
 
     delete:
       tags:
@@ -448,7 +450,7 @@ paths:
           format: "int64"
       responses:
         "404":
-          description: "Book not found"
+          description: "Publisher not found"
 
   /publishers/findByName:
     get:
@@ -566,7 +568,7 @@ paths:
           schema:
             $ref: "#/definitions/Genre"
         "404":
-          description: "Author not found"
+          description: "Genre not found"
 
     delete:
       tags:
@@ -584,7 +586,116 @@ paths:
           format: "int64"
       responses:
         "404":
-          description: "Book not found"
+          description: "Genre not found"
+
+  /users:
+    get:
+      tags:
+        - "user"
+      summary: "Show all users"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/User"
+        "405":
+          description: "Invalid input"
+
+    post:
+      tags:
+        - "user"
+      summary: "Add a new user"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "User object that needs to be added"
+          required: true
+          schema:
+            $ref: "#/definitions/User"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/User"
+        "405":
+          description: "Invalid input"
+
+    put:
+      tags:
+        - "user"
+      summary: "Update a user"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "User object that needs to be updated"
+          required: true
+          schema:
+            $ref: "#/definitions/User"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/User"
+        "405":
+          description: "Invalid input"
+
+  /users/{userID}:
+    get:
+      tags:
+        - "user"
+      summary: "Find user by ID"
+      description: "Returns a single user"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "userID"
+          in: "path"
+          description: "ID of user to return"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/User"
+        "404":
+          description: "User not found"
+
+    delete:
+      tags:
+        - "user"
+      summary: "Delete a user"
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - name: "userID"
+          in: "path"
+          description: "User id to delete"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "404":
+          description: "User not found"
 
 definitions:
   Book:
@@ -664,6 +775,22 @@ definitions:
         type: "integer"
         format: "int64"
       name:
+        type: "string"
+        format: "byte"
+
+  User:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      login:
+        type: "string"
+        format: "byte"
+      password:
+        type: "string"
+        format: "byte"
+      role:
         type: "string"
         format: "byte"
 
